Update `pom.xml` to fix command line arguments passing