@@ -32,9 +32,7 @@
                 <version>3.6.3</version>
                 <configuration>
                     <mainClass>com.alexd.app.App</mainClass>
-                    <arguments>
-                        <argument>--enable-native-access=ALL-UNNAMED</argument>
-                    </arguments>
+                    <commandlineArgs>--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow</commandlineArgs>
                 </configuration>
             </plugin>
             
